<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:checked="false"
            android:icon="@drawable/home"
            android:title="@string/home" />

        <item
            android:id="@+id/settings"
            android:checked="false"
            android:icon="@drawable/settings"
            android:title="@string/settings" />



        <item
            android:id="@+id/helpandfeedback"
            android:checked="false"
            android:icon="@drawable/help"
            android:title="@string/helpandfeedback" />

        <item
            android:id="@+id/guide"
            android:checked="false"
            android:icon="@drawable/guide"
            android:title="@string/guide" />

        <item
            android:id="@+id/logout"
            android:checked="false"
            android:icon="@drawable/ic_drafts_black"
            android:title="@string/logout" />
        <item
            android:id="@+id/about"
            android:checked="false"
            android:icon="@drawable/about"
            android:title="@string/about" />




    </group>
</menu>